--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -28,9 +28,11 @@
   border-radius: 2vw;
   color: #ffffff;
   text-decoration: none;
-  transition: 0.6s all cubic-bezier(0.23, 1, 0.32, 1);
+  transition: 0.4s all cubic-bezier(0.23, 1, 0.32, 1);
+  border: 3px solid white;
+  will-change: background-color;
 }
 
 .cont a:hover {
-  background-color: #15ccff;
+  background-color: #e18c85;
 }
